--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
-  }
+  },
+  "homepage": "https://sunliangxiaogan.github.io/sunliang-blog/"
 }
