feat: 优化技术页面标题和内容，修复GitHub Pages导航问题
- 将技术页面第一篇文章标题从'LLM和Agent'改为'大模型应用'
- 移除博客文章中agent相关介绍，聚焦大模型应用本身
- 修复GitHub Pages部署中的主页导航链接问题
- 统一所有页面的顶部内边距，避免导航栏遮挡标题
- 添加homepage配置到package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sunliang-blog",
+  "homepage": "https://sunliangxiaogan.github.io/sunliang-blog",
   "private": true,
   "version": "0.0.0",
   "type": "module",
